# cuda_project

./: CMakeLists.txt  README.md  main.cu  results.csv
.github/: copilot-instructions.md
benchmarks/: benchmark.py
frontend/: index.html
include/: config.cuh
reports/: ncu_index.json  ncu_shared_mem_matmul_kernel.txt  ncu_tensor_core_kernel.txt
scripts/: perf_runner.py  perf_summary.csv  perf_summary.json  plot.py  sweep.ps1  test_patterns.py
src/kernels/: batched.cu  dispatch.cu  high_shared.cu  kernels.h  layernorm.cu  shared_mem.cu  simple.cu  softmax.cu  tensor_core.cu  vectorized.cu  vectorized_opt.cu
src/utils/: timer.cu  utils.h  validator.cu
